--- a/Pioneer_Development/package.json
+++ b/Pioneer_Development/package.json
@@ -52,6 +52,7 @@
         "composer": "^4.1.0",
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
+        "dayjs": "^1.11.13",
         "globals": "^15.14.0",
         "install": "^0.13.0",
         "laravel-vite-plugin": "^1.0",
@@ -60,6 +61,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "sonner": "^2.0.5",
+        "swiper": "^11.2.10",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
