--- a/Pioneer_Development/package.json
+++ b/Pioneer_Development/package.json
@@ -52,6 +52,7 @@
         "composer": "^4.1.0",
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
+        "framer-motion": "^12.23.0",
         "globals": "^15.14.0",
         "install": "^0.13.0",
         "laravel-vite-plugin": "^1.0",
@@ -60,7 +61,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "sonner": "^2.0.5",
-        "tailwind-merge": "^3.0.1",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
