--- a/Pioneer_Development/package.json
+++ b/Pioneer_Development/package.json
@@ -28,7 +28,8 @@
     "dependencies": {
         "@easylogic/react-summernote": "^0.1.4",
         "@headlessui/react": "^2.2.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/react": "^2.0.14",
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-avatar": "^1.1.3",
