--- a/Pioneer_Development/package.json
+++ b/Pioneer_Development/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.3",
+        "@types/aos": "^3.0.7",
         "@types/jquery": "^3.5.32",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
@@ -50,6 +51,7 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "aos": "^2.3.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "composer": "^4.1.0",
@@ -61,7 +63,7 @@
         "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
-        "motion": "^12.19.2",
+        "motion": "^12.23.1",
         "popper.js": "^1.16.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
